--- a/src/app/pages/page2/page2.component.html
+++ b/src/app/pages/page2/page2.component.html
@@ -1,8 +1,34 @@
-<div class="card border-0 shadow my-5">
-    <div class="card-body p-5">
-      <h1 class="font-weight-light">Page 2</h1>
-      <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
-      <div style="height: 80vh"></div>
-      <p class="lead mb-0">The End!</p>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="card border-0 shadow my-5">
+      <div class="card-body p-5">
+        <h1 class="font-weight-light">Card 1</h1>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
+      </div>
     </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="card border-0 shadow my-5">
+      <div class="card-body p-5">
+        <h1 class="font-weight-light">Card2</h1>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="card border-0 shadow my-5">
+      <div class="card-body p-5">
+        <h1 class="font-weight-light">Card 3</h1>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="card border-0 shadow my-5">
+      <div class="card-body p-5">
+        <h1 class="font-weight-light">Card 4</h1>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
+      </div>
+    </div>
+  </div>
 </div>
