--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="" ><img src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg" alt="" style="width: 30px; height: 30px;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -6,16 +6,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="">Home</a>
+          <a class="nav-link" routerLink="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="page1">Page 1</a>
+          <a class="nav-link" routerLink="page1">Page 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="page2">Page 2</a>
+          <a class="nav-link" routerLink="page2">Page 2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="page3">Page 3</a>
+          <a class="nav-link" routerLink="page3">Page 3</a>
         </li>
       </ul>
     </div>
