--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,66 @@
-<div class="card border-0 shadow my-5">
-    <div class="card-body p-5">
-      <h1 class="font-weight-light">Home</h1>
-      <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
-      <div style="height: 80vh"></div>
-      <p class="lead mb-0">The End!</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://compab.it/media/uploads/images/19_grigio_manhattam_dUGXoNK.jpg" alt="First slide" style="width:100vh; height: 50vh;">
     </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://leroymerlin-res.cloudinary.com/c_pad,d_no-image_available.png,dpr_1.0,f_auto,fl_lossy,h_400,q_auto:good,w_400/v1/DAMEO/584688" alt="Second slide" style="width:100vh; height: 50vh;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://www.skerjanc.com/foto/cga-compact-plosce.jpg" alt="Third slide" style="width:100vh; height: 50vh;">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="card border-0 shadow my-5">
+        <a class="text-decoration-none text-dark" routerLink="page1">
+          <div class="card-body p-5">
+            <h1 class="font-weight-light">Page 1</h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card border-0 shadow my-5">
+        <a class="text-decoration-none text-dark" routerLink="page2">
+          <div class="card-body p-5">
+            <h1 class="font-weight-light">Page 2</h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-4 ">
+      <div class="card border-0 shadow my-5">
+        <a class="text-decoration-none text-dark" routerLink="page3">
+          <div class="card-body p-5">
+            <h1 class="font-weight-light">Page 3</h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    </div>
+</div>
+<div class="card border-0 shadow my-5 text-center">
+  <div class="card-body p-5">
+    <h1 class="font-weight-light">First Angular theme</h1>
+    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem iste ducimus voluptates nesciunt ut possimus aut laboriosam quia deserunt repudiandae dolore quos, dolorum ab quod in ipsa ea? Officia!</p>
+  </div>
 </div>
