--- a/src/app/pages/page2/page2.component.html
+++ b/src/app/pages/page2/page2.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: 10vh;">
   <div class="row">
     <div class="col-sm-4">
       <div class="card border-0 shadow my-5">
