--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: 15vh;">
   <div class="card border-0 shadow my-5">
     <div class="card-body p-5">
       <h1 class="font-weight-light">Page 3</h1>
